# language-reading-predictors

./: .cspell.config.yaml  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  METHODS.md  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
config/claude/: suggested-settings.json
config/spellcheck/: allow-en.txt
dag/: README.md  dag-language-reading-explained.md  dag-language-reading-lagged-per-wave.dot  dag-language-reading-lagged.dagitty  dag-language-reading-lagged.dot  dag-language-reading.dagitty  dag-language-reading.dot  dag-reading-language-memory.dagitty  dag-reading-language-memory.dot
data/: readme.md  rli_data_long.csv  rli_data_wide.csv
data/reading-language-memory/: README.md  reading_language_memory_data_long.csv  reading_language_memory_data_wide.csv  variables.csv  variables_t1_t4.csv
docs/: template.docx
docs/models/: PRIORS.md  README.md  index.qmd  lrp01.qmd  registry-counts.json
docs/report/: .gitignore  _caveats-association.qmd  _caveats-causal.qmd  _quarto.yml  _report_data.qmd  _variables.yml  acknowledgements.qmd  apa-numeric-superscript-brackets.csl  evidence-table.qmd  footer.tex  glossary.qmd  index.qmd  intro.qmd  references.bib  references.qmd  summary.qmd
docs/runbooks/: full-statistical-model-refit.md
notebooks/: 0000-temp.py  0001-data-variables.py  0002-associations.py  0003-predictors-word-reading-gain-random-forest-exc-outliers.py  0010-predictors-word-reading.py
notes/: 2026-05-12-project-review.md  202604121234-lightgbm-rf-comparison-tuning.md  202604121451-lightgbm-model-selection.md  202604161254-lrp01-feature-selection.md  202604161333-lrp01-feature-selection.md  202604161432-lrp01-feature-selection-mae.md  202604161452-lrp01-mae-predictors-check.md  202604161949-lrp02-feature-selection.md  202604171005-lrp01-signed-log-transform.md  202604171017-lrp02-refit-under-cap-fix.md  202604171108-lrp02-quantile-objective.md  202604171127-lpr03-feature-selection.md  202604171220-lrp02-time-invariant-weight-sensitivity.md  202604171240-lrp04-feature-selection.md  202604171345-model-results-report.md  202604171421-lrp05-feature-selection.md  202604171421-lrp06-feature-selection.md  202604171623-rct-word-reading-initial-lrp51.md  202604171715-lrp07-feature-selection.md  202604171715-lrp08-feature-selection.md  202604181235-status.md  202604181239-statistical-model-development.md  202604181400-lrp09-feature-selection.md  202604181400-lrp10-feature-selection.md  202604181445-lrp52-gp-sensitivity.md  202604181453-review-next-steps.md  202604181600-lrp52-58-findings.md  202604181630-lrp55-lkj-drop-and-comparison-fix.md  202604181700-lrp55-age-gp-drop.md  202604181723-lrp15-lrp16-blending-baseline.md  202604181730-mechanism-models-age-gp-drop-and-docs.md  202604181800-mechanism-random-intercepts.md  202604181930-lrp11-22-target-plan.md  202604182000-lrp11-lrp12-trog-baseline.md  202604182015-lrp13-lrp14-nonword-baseline.md  202604190931-lrp17-lrp18-aptgram-baseline.md  202604191003-lrp19-lrp20-aptinfo-baseline.md  202604191027-lrp21-lrp22-deappfi-baseline.md  202605141000-code-review-refit-results.md  202606161215-interaction-exploration-reading.md  (+173 more)
notes/assets/: 202607141030-lagged-dsep-checks.py  202607142340-med-adjustment-dsep.py  202607172230-riclpm-feasibility.py  dag-language-reading.dot
papers/: burgoyne-2012.md
plans/: readme.md
scripts/: ability_vocab_association.py  analyze_predictors.py  attrition_audit.py  blocks_vocab_gb_diagnostic.py  byrne_nonverbal_vocab_diagnostic.py  check_statistical_documentation.py  compare_horseshoe_vs_gb.py  compare_statistical_models.py  compare_variants.py  design_analysis.py  fit_historical_growth_model.py  fit_model.py  fit_statistical_model.py  format-markdown.mjs  influence_sensitivity.py  lrp02_weight_sensitivity.py  lrp_rli_gbl_012_weight_sensitivity.py  lrpgbl12_weight_sensitivity.py  measurement_audit.py  period_resolved_gb_diagnostic.py  pooled_moderation.py  predictability_readout.py  rank_predictors.py  readiness_threshold.py  regenerate_itt_contrast_figures.py  regenerate_key_findings.py  regenerate_mediation_calibration.py  replicate_reading_language_memory.py  restructure_statistical_reports.py  screen_interactions.py  tau_prior_sensitivity.py  tune_model.py  tune_models_batch.py  uniform_feature_selection.py  upload.py  within_child_interaction_check.py
scripts/descriptive/: README.md  floor_sitters.py  plot00_progress_over_time.py  (+24 more)
tests/: test_ability_vocab_association.py  test_blocks_vocab_gb_diagnostic.py  test_borrowed_params.py  test_byrne_nonverbal_vocab_diagnostic.py  test_cluster_ranking.py  test_compare_horseshoe_vs_gb.py  test_compare_loo.py  test_compare_triangulation.py  test_data_utils.py  test_data_variables.py  test_figure_io.py  test_gb_reporting.py  test_lagged_dag_adjustment_sets.py  test_ml_utils.py  test_model_definitions.py  test_model_ids.py  test_models.py  test_paths.py  test_plot_utils.py  test_rank_predictors.py  test_stats_utils.py
(+1059 files in other folders)
