[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "dse-language-reading-predictors"
dynamic = ["version"]
description = "Predictors of progress in language and reading skills for children with Down syndrome"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Frank Buckley" }]

dependencies = [
  "arviz-plots>=1.2.0",
  "arviz-stats>=1.2.0",
  "arviz>=1.2.0",
  "dse-research-utils>=0.2.0",
  "graphviz",
  "lightgbm>=4.6.0",
  "matplotlib>=3.10.8",
  "networkx",
  "numpy>=2.4.3",
  "pandas>=3.0.2",
  "preliz>=0.27.0",
  "pymc>=6.0.1",
  "rich>=15.0.0",
  "scikit-learn>=1.9.0",
  "seaborn>=0.13.2",
  "shap>=0.52.0",
  "scipy>=1.18.0",
  "xarray>=2026.4.0"
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1.1",
  "pytest>=9.0.3"
]

[tool.hatch.version]
path = "src/language_reading_predictors/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/language_reading_predictors"]

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # long scientific/model descriptions are allowed
    "E741",  # mathematical/statistical names are meaningful in model code
]

[tool.ruff.lint.isort]
known-first-party = ["language_reading_predictors"]
