[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "dse-language-reading-predictors"
dynamic = ["version"]
description = "Predictors of progress in language and reading skills for children with Down syndrome"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Frank Buckley" }]

dependencies = [
  "arviz-plots>=1.2.0",
  "arviz-stats>=1.2.0",
  "arviz>=1.2.0",
  "dse-research-utils>=0.7.0",
  "graphviz",
  "lightgbm>=4.6.0",
  "matplotlib>=3.10.8",
  "networkx",
  "numpy>=2.4.3",
  "pandas>=3.0.2",
  "preliz>=0.27.0",
  "pymc>=6.0.1",
  "rich>=15.0.0",
  "scikit-learn>=1.9.0",
  "seaborn>=0.13.2",
  "shap>=0.52.0",
  "scipy>=1.18.0",
  "xarray>=2026.4.0"
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1.1",
  "mypy>=1.18.2",
  "pytest>=9.0.3"
]

[tool.uv.sources]
# dse-research-utils isn't published to PyPI — resolve it from the public git
# tag. (The conda env in environment.yml installs it from the same tag in its
# pip layer; this entry is only consumed by uv.)
dse-research-utils = { git = "https://github.com/dseinternational/research.git", subdirectory = "src/python", tag = "v0.7.1" }

[tool.hatch.version]
path = "src/language_reading_predictors/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/language_reading_predictors"]

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B905", "RUF012"]

# Incremental static-typing gate (#361 Phase 5). Keep the first boundary small
# and strict: typed ITT specifications/run plans, shared execution/report stages,
# atomic publication, environment provenance, and registry documentation. Extend
# this list family by family as the Phase-2/3 migration removes ``ModelSpec.extra``.
[tool.mypy]
python_version = "3.14"
files = [
  "src/language_reading_predictors/statistical_models/documentation.py",
  "src/language_reading_predictors/statistical_models/itt.py",
  "src/language_reading_predictors/statistical_models/output_transaction.py",
  "src/language_reading_predictors/statistical_models/provenance.py",
  "src/language_reading_predictors/statistical_models/stages.py"
]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
